--- a/main.html
+++ b/main.html
@@ -67,10 +67,12 @@
   </h2>
   <div class="button-container">
     <a class="btn" href="https://fnk-author.github.io/Pomodoro/main.html" target="_blank">Harry Potter Pomodoro</a>
+    <a class="btn" href="https://fnk-author.github.io/MagicaAmatoria/DieKunstDesVerbotenen.html" target="_blank">Magica Amatoria (NSFW) - interaktives Buch zu meiner Fanfiktion Die Hexe in der Nacht</a>
     <a class="btn" href="https://fnk-author.github.io/CatchSnitch/main.html" target="_blank">Harry Potter Fang den Schnatz Game</a>
     <a class="btn" href="https://fnk-author.github.io/HPMemory/main.html" target="_blank">Harry Potter Memory Game</a>
     <a class="btn" href="https://fnk-author.github.io/HPHangman/main.html" target="_blank">Harry Potter Hangman Game</a>
     <a class="btn" href="https://fnk-author.github.io/Magie-O-Mat/main.html" target="_blank">Harry Potter Wahl-O-Mat</a>
+    <a class="btn" href="https://fnk-author.github.io/IchPackeMeinenZauberkoffer/main.html" target="_blank">Ich packe meinen Zauberkoffer und nehme mit...</a>
     <a class="btn" href="https://fnk-author.github.io/HagridsHuetteZauberduell/main.html" target="_blank">
       Harry Potter Zauberduell Generator (für den Podcast Hagrids Hütte)
     </a>
